@@ -1319,6 +1319,11 @@ val loga(val num)
   return flo(log(c_flo(to_float(lit("log"), num))));
 }
 
+val expo(val num)
+{
+  return flo(exp(c_flo(to_float(lit("exp"), num))));
+}
+
 val sqroot(val num)
 {
   return flo(sqrt(c_flo(to_float(lit("sqrt"), num))));
