@@ -6649,7 +6649,7 @@ Certain object types have a custom equal function.
 
 .SS Arithmetic function abs
 
-.SS Arithmetic functions floor, ceil, sin, cos, atan, log
+.SS Arithmetic functions floor, ceil, sin, cos, atan, log, exp
 
 .SS Arithmetic functions expt, sqrt, isqrt
 
