@@ -44,7 +44,7 @@ syn keyword txl_keyword contained memq memql memqual tree-find some
 syn keyword txl_keyword contained remq remql remqual
 syn keyword txl_keyword contained all none eq eql equal + - * / abs trunc mod
 syn keyword txl_keyword contained expt exptmod sqrt isqrt gcd 
-syn keyword txl_keyword contained floor ceil sin cos atan log
+syn keyword txl_keyword contained floor ceil sin cos atan log exp
 syn keyword txl_keyword contained fixnump bignump integerp floatp
 syn keyword txl_keyword contained numberp zerop evenp oddp >
 syn keyword txl_keyword contained zerop evenp oddp > < >= <= max min
